# face-defense

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
antispoof/: README.md
antispoof/data/: celeba_spoof_dataset.py
antispoof/models/: cdcn_model.py
antispoof/scripts/: benchmark_cdcn.py  demo_access.py  demo_debug.py  demo_gui.py  demo_webcam.py  finetune_cdcn_nuaa.py  train_cdcn.py
configs/: default.yaml
configs/anti_spoof/: cdcn.yaml  deepface_spoof.yaml  silent_fas.yaml
configs/data/: faceforensics.yaml  oulu_npu.yaml
configs/deepfake/: efficientnet.yaml  xception.yaml
configs/liveness/: blink.yaml  texture.yaml
configs/pipeline/: full_defense.yaml  lightweight.yaml
deepfake/: README.md
deepfake/data/: ff_dataset.py  video_sequence_dataset.py
deepfake/scripts/: benchmark_deepfake.py  demo_deepfake.py  demo_fft.py  demo_temporal.py  download_wilddeepfake.py  extract_frames.py  extract_video_frames.py  (+7 more)
emotion/: README.md
notebooks/: anti_spoof_test.ipynb  benchmark_eval.ipynb  pipeline_test.ipynb  test_deepface.ipynb
scripts/: benchmark_cdcn.py  benchmark_deepfake.py  crop_extra_faces.py  demo_access.py  demo_debug.py  demo_deepfake.py  demo_deepfake_gui.py  demo_fft.py  demo_gui.py  demo_image.py  demo_temporal.py  demo_webcam.py  download_ffhq_real.py  download_models.py  download_stylegan_faces.py  evaluate.py  finetune_cdcn_nuaa.py  generate_stylegan_faces.py  merge_train_csv.py  train.py  train_cdcn.py  train_deepfake.py  train_fft.py  train_temporal.py
shared/: camera.py  constants.py  face_utils.py  metrics.py
(+29 files in other folders)
